--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,31 +14,67 @@
         tools:targetApi="31">
         <activity
             android:name=".DeleteUser"
-            android:exported="false" />
+
+            android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity
             android:name=".ChangePassword"
-            android:exported="false" />
-        <activity
+
+            android:parentActivityName=".ProfileActivity">
+        <meta-data android:name="android.support.PARENT_ACTIVITY"
+            android:value=".ProfileActivity"/>
+        </activity>
+    <activity
             android:name=".UpdateEmail"
-            android:exported="false" />
+
+            android:parentActivityName=".ProfileActivity">
+        <meta-data android:name="android.support.PARENT_ACTIVITY"
+            android:value=".ProfileActivity"/>
+    </activity>
         <activity
             android:name=".UpdateProfile"
-            android:exported="false" />
+
+            android:parentActivityName=".ProfileActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ProfileActivity"/>
+        </activity>
         <activity
             android:name=".UploadProfilePic"
-            android:exported="false" />
+
+            android:parentActivityName=".ProfileActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ProfileActivity"/>
+        </activity>
         <activity
             android:name=".ForgotPassword"
-            android:exported="false" />
+
+            android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity
             android:name=".ProfileActivity"
-            android:exported="false" />
+
+            android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity
             android:name=".LoginActivity"
-            android:exported="false" />
+
+            android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity
             android:name=".RegisterActivity"
-            android:exported="false" />
+
+            android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
